--- a/assets/pug/layout/general/header.pug
+++ b/assets/pug/layout/general/header.pug
@@ -1,10 +1,17 @@
 // header
-header.wrapHeader
-    .container-xxl
-        h2.heading Pug Gulp Starter
-        p.desc Starter code for your Pug Gulp Boilerplate with SCSS
-        ul.headerNavList
-            each item in data.header.menu
-                li.headerNavItem
-                    a(href= item.link)= item.title 
+header
+    img(src="", alt="")
+nav
+    .container
+        ul
+            each item in data.header.menu 
+                if item.type === "text"
+                    li
+                        a(href=item.link)=item.title  
+                if item.type === "input"
+                    li
+                        input(type="text")
+                        a(href=item.link)=item.title  
+
+                 
 // end header
